# vetting-bot

./: .gitignore  README.md  README.old  SETUP.md  log  pyproject.toml  sample.config.yaml  shell.nix  vetting-bot
.github/workflows/: lint.yml
docker/: Dockerfile  Dockerfile.dev  README.md  docker-compose.yml  my-project-name.service
scripts-dev/: lint.sh
tests/: test_callbacks.py  test_config.py
vetting_bot/: bot_commands.py  callbacks.py  config.py  main.py  message_responses.py  storage.py  timer.py
